--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/node": "^24.3.0",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
